[refactor] Apply OpenRewrite Java21 recipe